# simple_field_code

./: .gitignore  CITATION.cff  CMakeLists.txt  Readme.md  calculate_field.f90  field_module.f90  field_module.mod  fieldcode.f90  get_field_calc  makefile  output_routine.f90  read_field.f90  read_field_input.f90
Examples/: field_input.in  popc.in  water.in
Support_Codes/Fortran/: read_field.f90
Support_Codes/Python/: grab_frames.py
field_module/: output_routine.f90
src/: CMakeLists.txt  fieldcode.f90
src/field_module/: CMakeLists.txt  field_module.f90  read_field_input.f90
